styles.css
body {
    margin: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 10px;
    height: 100vh;
    background-color: rgb(202, 225, 255);
    font-family: Georgia, 'Times New Roman', Times, serif;
}

main {
    display: flex;
    flex-direction: column;
    gap: 1em;
    align-items: center;
}

.card {
    display: flex;
    flex-direction: column;
    gap: 1rem;

    width: 20em;
    
    box-sizing: border-box;
    border-radius: 20px;
    padding: 20px;

    background-color: white;
    box-shadow: 0 4px 10px 10px rgba(0, 0, 0, 0.06);
}

img {
    border-radius: 20px;
    flex: auto;
}

h1 {
    font-size: 30px;
    font-weight: 700;
    text-align: center;
    margin: 0;
    flex: auto;
}

p {
    margin: 0;
    font-size: 18px;
    font-weight: 400;
    color: grey;
    text-align: center;
    flex: auto;
}

